nfsd: fix use-after-free due to delegation race (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -54073,6 +54073,7 @@
 	patches.suse/aio-keep-poll-requests-on-waitqueue-until-completed.patch
 	patches.suse/aio-fix-use-after-free-due-to-missing-POLLFREE-handl.patch
 	patches.suse/nfsd-Fix-nsfd-startup-race-again.patch
+	patches.suse/nfsd-fix-use-after-free-due-to-delegation-race.patch
 	patches.suse/cifs-fix-ntlmssp-auth-when-there-is-no-key-exchange.patch
 	patches.suse/clk-qcom-regmap-mux-fix-parent-clock-lookup.patch
 	patches.suse/nvme-fix-use-after-free-when-disconnecting-a-reconne.patch
