--- a/series.conf
+++ b/series.conf
@@ -52962,6 +52962,7 @@
 	patches.suse/KVM-PPC-Fix-clearing-never-mapped-TCEs-in-realmode.patch
 	patches.suse/NFSv4-pNFS-Fix-a-layoutget-livelock-loop.patch
 	patches.suse/SUNRPC-Fix-potential-memory-corruption.patch
+	patches.suse/SUNRPC-Clean-up-scheduling-of-autoclose.patch
 	patches.suse/SUNRPC-Simplify-socket-shutdown-when-not-reusing-TCP.patch
 	patches.suse/mtd-rawnand-cafe-Fix-a-resource-leak-in-the-error-ha.patch
 	patches.suse/libata-add-ATA_HORKAGE_NO_NCQ_TRIM-for-Samsung-860-a.patch
