NFSv4: Fix second deadlock in nfs4_evict_inode() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -51211,6 +51211,7 @@
 	patches.suse/NFS-Fix-use-after-free-in-nfs4_init_client.patch
 	patches.suse/NFS-Fix-a-potential-NULL-dereference-in-nfs_get_clie.patch
 	patches.suse/NFSv4-Fix-deadlock-between-nfs4_evict_inode-and-nfs4.patch
+	patches.suse/NFSv4-Fix-second-deadlock-in-nfs4_evict_inode.patch
 	patches.suse/dmaengine-idxd-add-missing-dsa-driver-unregister.patch
 	patches.suse/dmaengine-fsl-dpaa2-qdma-Fix-error-return-code-in-tw.patch
 	patches.suse/dmaengine-pl330-fix-wrong-usage-of-spinlock-flags-in.patch
