NFSv4.2: support EXCHGID4_FLAG_SUPP_FENCE_OPS 4.2 EXCHANGE_ID flag (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -45364,6 +45364,7 @@
 	patches.suse/power-supply-test_power-add-missing-newlines-when-pr.patch
 	patches.suse/NFSv4-Wait-for-stateid-updates-after-CLOSE-OPEN_DOWN.patch
 	patches.suse/NFS-fix-nfs_path-in-case-of-a-rename-retry.patch
+	patches.suse/NFSv4.2-support-EXCHGID4_FLAG_SUPP_FENCE_OPS-4.2-EXC.patch
 	patches.suse/ida-Free-allocated-bitmap-in-error-path.patch
 	patches.suse/ceph-promote-to-unsigned-long-long-before-shifting.patch
 	patches.suse/libceph-clear-con-out_msg-on-policy-stateful_server-faults.patch
