NFSD: Add missing NFSv2 .pc_func methods (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -45415,6 +45415,7 @@
 	patches.suse/watchdog-sp5100-Fix-definition-of-EFCH_PM_DECODEEN3.patch
 	patches.suse/9P-Cast-to-loff_t-before-multiplying.patch
 	patches.suse/silence-nfscache-allocation-warnings-with-kvzalloc.patch
+	patches.suse/NFSD-Add-missing-NFSv2-.pc_func-methods.patch
 	patches.suse/svcrdma-fix-bounce-buffers-for-unaligned-offsets-and.patch
 	patches.suse/SUNRPC-fix-copying-of-multiple-pages-in-gss_read_pro.patch
 	patches.suse/ext4-fix-leaking-sysfs-kobject-after-failed-mount.patch
