--- a/series.conf
+++ b/series.conf
@@ -47527,6 +47527,7 @@
 	patches.suse/lockd-don-t-use-interval-based-rebinding-over-TCP.patch
 	patches.suse/NFS-switch-nfsiod-to-be-an-UNBOUND-workqueue.patch
 	patches.suse/sunrpc-fix-xs_read_xdr_buf-for-partial-pages-receive.patch
+	patches.suse/xprtrdma-Fix-XDRBUF_SPARSE_PAGES-support.patch
 	patches.suse/NFS-pNFS-Fix-a-typo-in-ff_layout_resend_pnfs_read.patch
 	patches.suse/dmaengine-idxd-Add-shared-workqueue-support.patch
 	patches.suse/dmaengine-idxd-Clean-up-descriptors-with-fault-error.patch
