SUNRPC: Fix READ_PLUS crasher (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -56216,6 +56216,7 @@
 	patches.suse/dm-raid-fix-KASAN-warning-in-raid5_add_disks.patch
 	patches.suse/hwmon-ibmaem-don-t-call-platform_device_del-if-platf.patch
 	patches.suse/drivers-cpufreq-Add-missing-of_node_put-in-qoriq-cpu.patch
+	patches.suse/SUNRPC-Fix-READ_PLUS-crasher.patch
 	patches.suse/soc-ixp4xx-npe-Fix-unused-match-warning.patch
 	patches.suse/xen-blkfront-fix-leaking-data-in-shared-pages.patch
 	patches.suse/xen-netfront-fix-leaking-data-in-shared-pages.patch
