--- a/series.conf
+++ b/series.conf
@@ -56213,6 +56213,7 @@
 	patches.suse/usbnet-fix-memory-allocation-in-helpers.patch
 	patches.suse/net-usb-ax88179_178a-Fix-packet-receiving.patch
 	patches.suse/net-rose-fix-UAF-bugs-caused-by-timer-handler.patch
+	patches.suse/dm-raid-fix-KASAN-warning-in-raid5_add_disks.patch
 	patches.suse/hwmon-ibmaem-don-t-call-platform_device_del-if-platf.patch
 	patches.suse/drivers-cpufreq-Add-missing-of_node_put-in-qoriq-cpu.patch
 	patches.suse/soc-ixp4xx-npe-Fix-unused-match-warning.patch
