--- a/series.conf
+++ b/series.conf
@@ -55058,6 +55058,7 @@
 	patches.suse/Adjust-cifssb-maximum-read-size.patch
 	patches.suse/cifs-we-do-not-need-a-spinlock-around-the-tree-access-during-umount.patch
 	patches.suse/cifs-use-a-different-reconnect-helper-for-non-cifsd-threads.patch
+	patches.suse/NFSD-prevent-underflow-in-nfssvc_decode_writeargs.patch
 	patches.suse/sched-debug-Remove-mpol_get-put-and-task_lock-unlock.patch
 	patches.suse/vsprintf-Fix-pK-with-kptr_restrict-0.patch
 	patches.suse/printk-Add-panic_in_progress-helper.patch
