--- a/series.conf
+++ b/series.conf
@@ -12539,6 +12539,7 @@
 	patches.suse/drm-fourcc-fix-integer-type-usage-in-uapi-header.patch
 	patches.suse/drm-amdgpu-To-flush-tlb-for-MMHUB-of-RAVEN-series.patch
 	patches.suse/Revert-drm-amdgpu-display-set-vblank_disable_immedia.patch
+	patches.suse/dm-raid-fix-KASAN-warning-in-raid5_add_disks.patch
 	patches.suse/hwmon-occ-Prevent-power-cap-command-overwriting-poll.patch
 	patches.suse/hwmon-ibmaem-don-t-call-platform_device_del-if-platf.patch
 	patches.suse/PM-devfreq-exynos-ppmu-Fix-refcount-leak-in-of_get_d.patch
