--- a/series.conf
+++ b/series.conf
@@ -12006,6 +12006,7 @@
 	patches.suse/platform-chrome-Re-introduce-cros_ec_cmd_xfer-and-us.patch
 	patches.suse/nfsd-Fix-null-ptr-deref-in-nfsd_fill_super.patch
 	patches.suse/nfsd-destroy-percpu-stats-counters-after-reply-cache.patch
+	patches.suse/NFSD-Fix-possible-sleep-during-nfsd4_release_lockown.patch
 	patches.suse/0010-dm-integrity-fix-error-code-in-dm_integrity_ctr.patch
 	patches.suse/pipe-Fix-missing-lock-in-pipe_resize_ring.patch
 	patches.suse/list-fix-a-data-race-around-ep-rdllist.patch
