SUNRPC: Fix NFSD's request deferral on RDMA transports (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -11123,6 +11123,7 @@
 	patches.suse/platform-x86-samsung-laptop-Fix-an-unsigned-comparis.patch
 	patches.suse/media-rockchip-rga-do-proper-error-checking-in-probe.patch
 	patches.suse/nfsd-Fix-a-write-performance-regression.patch
+	patches.suse/SUNRPC-Fix-NFSD-s-request-deferral-on-RDMA-transport.patch
 	patches.suse/SUNRPC-Fix-the-svc_deferred_event-trace-class.patch
 	patches.suse/uapi-linux-stddef.h-Add-include-guards.patch
 	patches.suse/ALSA-hda-i915-skip-acomp-init-if-no-matching-display.patch
@@ -13794,6 +13795,7 @@
 	patches.kabi/snd-soc-rt5682-kABI-workaround.patch
 	patches.kabi/blk-mq-fix-kabi-support-concurrent-queue-quiesce-unquiesce.patch
 	patches.kabi/nvmet-kabi-fixes-for-in-band-authentication.patch
+	patches.kabi/SUNRPC-Fix-NFSD-s-request-deferral-on-RDMA-transport-kabi.patch
 
 	########################################################
 	# SLE15-SP3 OOT performance patches evaluated but left
