SUNRPC: Prevent immediate close+reconnect (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -6732,6 +6732,7 @@
 	patches.suse/Fix-user-namespace-leak.patch
 	patches.suse/NFSv4-Fix-a-regression-in-nfs_set_open_stateid_locke.patch
 	patches.suse/SUNRPC-Check-if-the-xprt-is-connected-before-handlin.patch
+	patches.suse/SUNRPC-Prevent-immediate-close-reconnect.patch
 	patches.suse/nfsd-don-t-alloc-under-spinlock-in-rpc_parse_scope_i.patch
 	patches.suse/ext4-fix-lazy-initialization-next-schedule-time-comp.patch
 	patches.suse/ext4-ensure-enough-credits-in-ext4_ext_shift_path_ex.patch
