--- a/series.conf
+++ b/series.conf
@@ -7514,6 +7514,7 @@
 	patches.suse/PM-runtime-Fix-pm_runtime_active-kerneldoc-comment.patch
 	patches.suse/thermal-int340x-Fix-VCoRefLow-MMIO-bit-offset-for-TG.patch
 	patches.suse/nfsd-Fix-nsfd-startup-race-again.patch
+	patches.suse/nfsd-fix-use-after-free-due-to-delegation-race.patch
 	patches.suse/cifs-fix-ntlmssp-auth-when-there-is-no-key-exchange.patch
 	patches.suse/btrfs-fix-re-dirty-process-of-tree-log-nodes.patch
 	patches.suse/dt-bindings-media-nxp-imx7-mipi-csi2-Drop-bad-if-the.patch
