--- a/series.conf
+++ b/series.conf
@@ -9312,6 +9312,7 @@
 	patches.suse/NFSD-Fix-the-behavior-of-READ-near-OFFSET_MAX.patch
 	patches.suse/NFSD-Fix-ia_size-underflow.patch
 	patches.suse/NFSD-Fix-NFSv3-SETATTR-CREATE-s-handling-of-large-fi.patch
+	patches.suse/NFSD-Clamp-WRITE-offsets.patch
 	patches.suse/tipc-improve-size-validations-for-received-domain-re.patch
 	patches.suse/selftests-fixup-build-warnings-in-pidfd-clone3-tests.patch
 	patches.suse/net-sparx5-Fix-get_stat64-crash-in-tcpdump.patch
