NFSD: Fix ia_size underflow (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -9310,6 +9310,7 @@
 	patches.suse/crypto-octeontx2-Avoid-stack-variable-overflow.patch
 	patches.suse/crypto-api-Move-cryptomgr-soft-dependency-into-algap.patch
 	patches.suse/NFSD-Fix-the-behavior-of-READ-near-OFFSET_MAX.patch
+	patches.suse/NFSD-Fix-ia_size-underflow.patch
 	patches.suse/tipc-improve-size-validations-for-received-domain-re.patch
 	patches.suse/selftests-fixup-build-warnings-in-pidfd-clone3-tests.patch
 	patches.suse/net-sparx5-Fix-get_stat64-crash-in-tcpdump.patch
