NFSD: prevent underflow in nfssvc_decode_writeargs() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -10073,6 +10073,7 @@
 	patches.suse/cifs-we-do-not-need-a-spinlock-around-the-tree-access-during-umount.patch
 	patches.suse/cifs-use-a-different-reconnect-helper-for-non-cifsd-threads.patch
 	patches.suse/nfsd-more-robust-allocation-failure-handling-in-nfsd.patch
+	patches.suse/NFSD-prevent-underflow-in-nfssvc_decode_writeargs.patch
 	patches.suse/ext4-fix-ext4_fc_stats-trace-point.patch
 	patches.suse/perf-core-Fix-address-filter-parser-for-multiple-filters.patch
 	patches.suse/perf-x86-intel-pt-Fix-address-filter-config-for-32-bit-kernel.patch
