pinctrl: nomadik: Fix refcount leak in nmk_pinctrl_dt_subnode_to_map (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13248,6 +13248,7 @@
 	patches.suse/x86-speculation-Add-LFENCE-to-RSB-fill-sequence.patch
 	patches.suse/Revert-scripts-mod-modpost.c-permit-.cranges-secton-.patch
 	patches.suse/kbuild-dummy-tools-avoid-tmpdir-leak-in-dummy-gcc.patch
+	patches.suse/pinctrl-nomadik-Fix-refcount-leak-in-nmk_pinctrl_dt_.patch
 
 	########################################################
 	# end of sorted patches
