--- a/series.conf
+++ b/series.conf
@@ -13249,6 +13249,7 @@
 	patches.suse/Revert-scripts-mod-modpost.c-permit-.cranges-secton-.patch
 	patches.suse/kbuild-dummy-tools-avoid-tmpdir-leak-in-dummy-gcc.patch
 	patches.suse/pinctrl-nomadik-Fix-refcount-leak-in-nmk_pinctrl_dt_.patch
+	patches.suse/pinctrl-qcom-msm8916-Allow-CAMSS-GP-clocks-to-be-mux.patch
 
 	########################################################
 	# end of sorted patches
