pinctrl: amd: Don't save/restore interrupt status and wake status bits (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13250,6 +13250,7 @@
 	patches.suse/kbuild-dummy-tools-avoid-tmpdir-leak-in-dummy-gcc.patch
 	patches.suse/pinctrl-nomadik-Fix-refcount-leak-in-nmk_pinctrl_dt_.patch
 	patches.suse/pinctrl-qcom-msm8916-Allow-CAMSS-GP-clocks-to-be-mux.patch
+	patches.suse/pinctrl-amd-Don-t-save-restore-interrupt-status-and-.patch
 
 	########################################################
 	# end of sorted patches
