--- a/series.conf
+++ b/series.conf
@@ -13246,6 +13246,7 @@
 	patches.suse/remoteproc-sysmon-Wait-for-SSCTL-service-to-come-up.patch
 	patches.suse/x86-speculation-Add-RSB-VM-Exit-protections.patch
 	patches.suse/x86-speculation-Add-LFENCE-to-RSB-fill-sequence.patch
+	patches.suse/Revert-scripts-mod-modpost.c-permit-.cranges-secton-.patch
 
 	########################################################
 	# end of sorted patches
