--- a/series.conf
+++ b/series.conf
@@ -13247,6 +13247,7 @@
 	patches.suse/x86-speculation-Add-RSB-VM-Exit-protections.patch
 	patches.suse/x86-speculation-Add-LFENCE-to-RSB-fill-sequence.patch
 	patches.suse/Revert-scripts-mod-modpost.c-permit-.cranges-secton-.patch
+	patches.suse/kbuild-dummy-tools-avoid-tmpdir-leak-in-dummy-gcc.patch
 
 	########################################################
 	# end of sorted patches
