mmap locking API: add mmap_lock_is_contended() (bsc#1201990).

--- a/series.conf
+++ b/series.conf
@@ -43660,6 +43660,7 @@
 	patches.suse/mm-fadvise-improve-the-expensive-remote-LRU-cache-draining-after-FADV_DONTNEED.patch
 	patches.suse/mmswapfile.c-fix-potential-memory-leak-in-sys_swapon.patch
 	patches.suse/mm-memremap-c-convert-devmap-static-branch-to-inc-dec.patch
+	patches.suse/0001-mmap-locking-API-add-mmap_lock_is_contended.patch
 	patches.suse/lib-test_hmm-c-remove-unused-dmirror_zero_page.patch
 	patches.suse/mm-vmscan-fix-infinite-loop-in-drop_slab_node.patch
 	patches.suse/kvm-svm-add-ghcb-definitions
