mm: proc: smaps_rollup: do not stall write attempts on mmap_lock (bsc#1201990).

--- a/series.conf
+++ b/series.conf
@@ -43662,6 +43662,7 @@
 	patches.suse/mm-memremap-c-convert-devmap-static-branch-to-inc-dec.patch
 	patches.suse/0001-mmap-locking-API-add-mmap_lock_is_contended.patch
 	patches.suse/0002-mm-smaps-extend-smap_gather_stats-to-support-specifi.patch
+	patches.suse/0003-mm-proc-smaps_rollup-do-not-stall-write-attempts-on-.patch
 	patches.suse/lib-test_hmm-c-remove-unused-dmirror_zero_page.patch
 	patches.suse/mm-vmscan-fix-infinite-loop-in-drop_slab_node.patch
 	patches.suse/kvm-svm-add-ghcb-definitions
