ACPI: video: Force backlight native for some TongFang devices (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -29,6 +29,7 @@
 	########################################################
 	patches.kernel.org/5.19.1-001-block-fix-default-IO-priority-handling-again.patch
 	patches.kernel.org/5.19.1-002-tools-vm-slabinfo-Handle-files-in-debugfs.patch
+	patches.kernel.org/5.19.1-003-ACPI-video-Force-backlight-native-for-some-Ton.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
