--- a/series.conf
+++ b/series.conf
@@ -45,6 +45,7 @@
 	patches.kernel.org/5.19.1-016-Bluetooth-btusb-Add-Realtek-RTL8852C-support-I.patch
 	patches.kernel.org/5.19.1-017-Bluetooth-btusb-Add-Realtek-RTL8852C-support-I.patch
 	patches.kernel.org/5.19.1-018-Bluetooth-btusb-Add-Realtek-RTL8852C-support-I.patch
+	patches.kernel.org/5.19.1-019-macintosh-adb-fix-oob-read-in-do_adb_query-fun.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
