--- a/series.conf
+++ b/series.conf
@@ -30,6 +30,7 @@
 	patches.kernel.org/5.19.1-001-block-fix-default-IO-priority-handling-again.patch
 	patches.kernel.org/5.19.1-002-tools-vm-slabinfo-Handle-files-in-debugfs.patch
 	patches.kernel.org/5.19.1-003-ACPI-video-Force-backlight-native-for-some-Ton.patch
+	patches.kernel.org/5.19.1-004-ACPI-video-Shortening-quirk-list-by-identifyin.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
