--- a/series.conf
+++ b/series.conf
@@ -43,6 +43,7 @@
 	patches.kernel.org/5.19.1-014-Bluetooth-btusb-Add-Realtek-RTL8852C-support-I.patch
 	patches.kernel.org/5.19.1-015-Bluetooth-btusb-Add-Realtek-RTL8852C-support-I.patch
 	patches.kernel.org/5.19.1-016-Bluetooth-btusb-Add-Realtek-RTL8852C-support-I.patch
+	patches.kernel.org/5.19.1-017-Bluetooth-btusb-Add-Realtek-RTL8852C-support-I.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
