crypto: arm64/poly1305 - fix a read out-of-bound (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -32,6 +32,7 @@
 	patches.kernel.org/5.19.1-003-ACPI-video-Force-backlight-native-for-some-Ton.patch
 	patches.kernel.org/5.19.1-004-ACPI-video-Shortening-quirk-list-by-identifyin.patch
 	patches.kernel.org/5.19.1-005-ACPI-APEI-Better-fix-to-avoid-spamming-the-con.patch
+	patches.kernel.org/5.19.1-006-crypto-arm64-poly1305-fix-a-read-out-of-bound.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
