--- a/series.conf
+++ b/series.conf
@@ -37,6 +37,7 @@
 	patches.kernel.org/5.19.1-008-arm64-set-UXN-on-swapper-page-tables.patch
 	patches.kernel.org/5.19.1-009-Bluetooth-hci_qca-Return-wakeup-for-qca_wakeup.patch
 	patches.kernel.org/5.19.1-010-Bluetooth-hci_bcm-Add-BCM4349B1-variant.patch
+	patches.kernel.org/5.19.1-011-Bluetooth-hci_bcm-Add-DT-compatible-for-CYW555.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
