x86/speculation: Add RSB VM Exit protections (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -46,6 +46,7 @@
 	patches.kernel.org/5.19.1-017-Bluetooth-btusb-Add-Realtek-RTL8852C-support-I.patch
 	patches.kernel.org/5.19.1-018-Bluetooth-btusb-Add-Realtek-RTL8852C-support-I.patch
 	patches.kernel.org/5.19.1-019-macintosh-adb-fix-oob-read-in-do_adb_query-fun.patch
+	patches.kernel.org/5.19.1-020-x86-speculation-Add-RSB-VM-Exit-protections.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
