--- a/series.conf
+++ b/series.conf
@@ -47,6 +47,7 @@
 	patches.kernel.org/5.19.1-018-Bluetooth-btusb-Add-Realtek-RTL8852C-support-I.patch
 	patches.kernel.org/5.19.1-019-macintosh-adb-fix-oob-read-in-do_adb_query-fun.patch
 	patches.kernel.org/5.19.1-020-x86-speculation-Add-RSB-VM-Exit-protections.patch
+	patches.kernel.org/5.19.1-021-x86-speculation-Add-LFENCE-to-RSB-fill-sequenc.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
