ACPI: APEI: Better fix to avoid spamming the console with old error logs (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -31,6 +31,7 @@
 	patches.kernel.org/5.19.1-002-tools-vm-slabinfo-Handle-files-in-debugfs.patch
 	patches.kernel.org/5.19.1-003-ACPI-video-Force-backlight-native-for-some-Ton.patch
 	patches.kernel.org/5.19.1-004-ACPI-video-Shortening-quirk-list-by-identifyin.patch
+	patches.kernel.org/5.19.1-005-ACPI-APEI-Better-fix-to-avoid-spamming-the-con.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
