--- a/series.conf
+++ b/series.conf
@@ -40,6 +40,7 @@
 	patches.kernel.org/5.19.1-011-Bluetooth-hci_bcm-Add-DT-compatible-for-CYW555.patch
 	patches.kernel.org/5.19.1-012-dt-bindings-bluetooth-broadcom-Add-BCM4349B1-D.patch
 	patches.kernel.org/5.19.1-013-Bluetooth-btusb-Add-support-of-IMC-Networks-PI.patch
+	patches.kernel.org/5.19.1-014-Bluetooth-btusb-Add-Realtek-RTL8852C-support-I.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
