block: fix default IO priority handling again (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -27,6 +27,7 @@
 	# DO NOT MODIFY THEM!
 	# Send separate patches upstream if you find a problem...
 	########################################################
+	patches.kernel.org/5.19.1-001-block-fix-default-IO-priority-handling-again.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
