--- a/series.conf
+++ b/series.conf
@@ -34,6 +34,7 @@
 	patches.kernel.org/5.19.1-005-ACPI-APEI-Better-fix-to-avoid-spamming-the-con.patch
 	patches.kernel.org/5.19.1-006-crypto-arm64-poly1305-fix-a-read-out-of-bound.patch
 	patches.kernel.org/5.19.1-007-ata-sata_mv-Fixes-expected-number-of-resources.patch
+	patches.kernel.org/5.19.1-008-arm64-set-UXN-on-swapper-page-tables.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
