--- a/series.conf
+++ b/series.conf
@@ -48,6 +48,7 @@
 	patches.kernel.org/5.19.1-019-macintosh-adb-fix-oob-read-in-do_adb_query-fun.patch
 	patches.kernel.org/5.19.1-020-x86-speculation-Add-RSB-VM-Exit-protections.patch
 	patches.kernel.org/5.19.1-021-x86-speculation-Add-LFENCE-to-RSB-fill-sequenc.patch
+	patches.kernel.org/5.19.1-022-Linux-5.19.1.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
