--- a/series.conf
+++ b/series.conf
@@ -35,6 +35,7 @@
 	patches.kernel.org/5.19.1-006-crypto-arm64-poly1305-fix-a-read-out-of-bound.patch
 	patches.kernel.org/5.19.1-007-ata-sata_mv-Fixes-expected-number-of-resources.patch
 	patches.kernel.org/5.19.1-008-arm64-set-UXN-on-swapper-page-tables.patch
+	patches.kernel.org/5.19.1-009-Bluetooth-hci_qca-Return-wakeup-for-qca_wakeup.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
