--- a/series.conf
+++ b/series.conf
@@ -8277,6 +8277,7 @@
 	patches.suse/rtw89-coex-Update-COEX-to-5.5.8.patch
 	patches.suse/wireless-iwlwifi-Fix-a-double-free-in-iwl_txq_dyn_al.patch
 	patches.suse/iwlwifi-mvm-demote-non-compliant-kernel-doc-header.patch
+	patches.suse/iwlwifi-mvm-fix-delBA-vs.-NSSN-queue-sync-race.patch
 	patches.suse/iwlwifi-mvm-synchronize-with-FW-after-multicast-comm.patch
 	patches.suse/iwlwifi-mvm-avoid-clearing-a-just-saved-session-prot.patch
 	patches.suse/ath11k-Use-host-CE-parameters-for-CE-interrupts-conf.patch
