--- a/series.conf
+++ b/series.conf
@@ -8288,6 +8288,7 @@
 	patches.suse/iwlwifi-mvm-support-RLC-configuration-command.patch
 	patches.suse/iwlwifi-fw-api-add-link-to-PHY-context-command-struc.patch
 	patches.suse/iwlwifi-mvm-add-support-for-PHY-context-command-v4.patch
+	patches.suse/iwlwifi-remove-unused-iwlax210_2ax_cfg_so_hr_a0-stru.patch
 	patches.suse/iwlwifi-mvm-avoid-clearing-a-just-saved-session-prot.patch
 	patches.suse/ath11k-Use-host-CE-parameters-for-CE-interrupts-conf.patch
 	patches.suse/ath11k-Avoid-NULL-ptr-access-during-mgmt-tx-cleanup.patch
