--- a/series.conf
+++ b/series.conf
@@ -8295,6 +8295,7 @@
 	patches.suse/iwlwifi-mvm-Add-support-for-a-new-version-of-scan-re.patch
 	patches.suse/iwlwifi-mvm-add-support-for-statistics-update-versio.patch
 	patches.suse/iwlwifi-mvm-avoid-clearing-a-just-saved-session-prot.patch
+	patches.suse/iwlwifi-mvm-update-rate-scale-in-moving-back-to-asso.patch
 	patches.suse/ath11k-Use-host-CE-parameters-for-CE-interrupts-conf.patch
 	patches.suse/ath11k-Avoid-NULL-ptr-access-during-mgmt-tx-cleanup.patch
 	patches.suse/ath10k-Fix-the-MTU-size-on-QCA9377-SDIO.patch
