iwlwifi: mvm: d3: move GTK rekeys condition (bsc#1202131).

--- a/series.conf
+++ b/series.conf
@@ -8281,6 +8281,7 @@
 	patches.suse/iwlwifi-mvm-synchronize-with-FW-after-multicast-comm.patch
 	patches.suse/iwlwifi-support-4-bits-in-MAC-step-value.patch
 	patches.suse/iwlwifi-add-support-for-Bz-Z-HW.patch
+	patches.suse/iwlwifi-mvm-d3-move-GTK-rekeys-condition.patch
 	patches.suse/iwlwifi-mvm-avoid-clearing-a-just-saved-session-prot.patch
 	patches.suse/ath11k-Use-host-CE-parameters-for-CE-interrupts-conf.patch
 	patches.suse/ath11k-Avoid-NULL-ptr-access-during-mgmt-tx-cleanup.patch
