--- a/series.conf
+++ b/series.conf
@@ -8293,6 +8293,7 @@
 	patches.suse/iwlwifi-add-missing-entries-for-Gf4-with-So-and-SoF.patch
 	patches.suse/iwlwifi-mvm-Fix-wrong-documentation-for-scan-request.patch
 	patches.suse/iwlwifi-mvm-Add-support-for-a-new-version-of-scan-re.patch
+	patches.suse/iwlwifi-mvm-add-support-for-statistics-update-versio.patch
 	patches.suse/iwlwifi-mvm-avoid-clearing-a-just-saved-session-prot.patch
 	patches.suse/ath11k-Use-host-CE-parameters-for-CE-interrupts-conf.patch
 	patches.suse/ath11k-Avoid-NULL-ptr-access-during-mgmt-tx-cleanup.patch
