--- a/series.conf
+++ b/series.conf
@@ -8285,6 +8285,7 @@
 	patches.suse/iwlwifi-pcie-support-Bz-suspend-resume-trigger.patch
 	patches.suse/iwlwifi-mvm-parse-firmware-alive-message-version-6.patch
 	patches.suse/iwlwifi-mvm-d3-support-v12-wowlan-status.patch
+	patches.suse/iwlwifi-mvm-support-RLC-configuration-command.patch
 	patches.suse/iwlwifi-mvm-avoid-clearing-a-just-saved-session-prot.patch
 	patches.suse/ath11k-Use-host-CE-parameters-for-CE-interrupts-conf.patch
 	patches.suse/ath11k-Avoid-NULL-ptr-access-during-mgmt-tx-cleanup.patch
