iwlwifi: add missing entries for Gf4 with So and SoF (bsc#1202131).

--- a/series.conf
+++ b/series.conf
@@ -8290,6 +8290,7 @@
 	patches.suse/iwlwifi-mvm-add-support-for-PHY-context-command-v4.patch
 	patches.suse/iwlwifi-remove-unused-iwlax210_2ax_cfg_so_hr_a0-stru.patch
 	patches.suse/iwlwifi-mvm-remove-session-protection-upon-station-r.patch
+	patches.suse/iwlwifi-add-missing-entries-for-Gf4-with-So-and-SoF.patch
 	patches.suse/iwlwifi-mvm-avoid-clearing-a-just-saved-session-prot.patch
 	patches.suse/ath11k-Use-host-CE-parameters-for-CE-interrupts-conf.patch
 	patches.suse/ath11k-Avoid-NULL-ptr-access-during-mgmt-tx-cleanup.patch
