--- a/series.conf
+++ b/series.conf
@@ -8280,6 +8280,7 @@
 	patches.suse/iwlwifi-mvm-fix-delBA-vs.-NSSN-queue-sync-race.patch
 	patches.suse/iwlwifi-mvm-synchronize-with-FW-after-multicast-comm.patch
 	patches.suse/iwlwifi-support-4-bits-in-MAC-step-value.patch
+	patches.suse/iwlwifi-add-support-for-Bz-Z-HW.patch
 	patches.suse/iwlwifi-mvm-avoid-clearing-a-just-saved-session-prot.patch
 	patches.suse/ath11k-Use-host-CE-parameters-for-CE-interrupts-conf.patch
 	patches.suse/ath11k-Avoid-NULL-ptr-access-during-mgmt-tx-cleanup.patch
