iwlwifi: mvm: add support for PHY context command v4 (bsc#1202131).

--- a/series.conf
+++ b/series.conf
@@ -8287,6 +8287,7 @@
 	patches.suse/iwlwifi-mvm-d3-support-v12-wowlan-status.patch
 	patches.suse/iwlwifi-mvm-support-RLC-configuration-command.patch
 	patches.suse/iwlwifi-fw-api-add-link-to-PHY-context-command-struc.patch
+	patches.suse/iwlwifi-mvm-add-support-for-PHY-context-command-v4.patch
 	patches.suse/iwlwifi-mvm-avoid-clearing-a-just-saved-session-prot.patch
 	patches.suse/ath11k-Use-host-CE-parameters-for-CE-interrupts-conf.patch
 	patches.suse/ath11k-Avoid-NULL-ptr-access-during-mgmt-tx-cleanup.patch
