--- a/series.conf
+++ b/series.conf
@@ -8297,6 +8297,7 @@
 	patches.suse/iwlwifi-mvm-avoid-clearing-a-just-saved-session-prot.patch
 	patches.suse/iwlwifi-mvm-update-rate-scale-in-moving-back-to-asso.patch
 	patches.suse/iwlwifi-yoyo-support-for-DBGC4-for-dram.patch
+	patches.suse/iwlwifi-acpi-fix-wgds-rev-3-size.patch
 	patches.suse/ath11k-Use-host-CE-parameters-for-CE-interrupts-conf.patch
 	patches.suse/ath11k-Avoid-NULL-ptr-access-during-mgmt-tx-cleanup.patch
 	patches.suse/ath10k-Fix-the-MTU-size-on-QCA9377-SDIO.patch
