iwlwifi: mvm: demote non-compliant kernel-doc header (bsc#1202131).

--- a/series.conf
+++ b/series.conf
@@ -8276,6 +8276,7 @@
 	patches.suse/rtw89-coex-Cancel-PS-leaving-while-C2H-comes.patch
 	patches.suse/rtw89-coex-Update-COEX-to-5.5.8.patch
 	patches.suse/wireless-iwlwifi-Fix-a-double-free-in-iwl_txq_dyn_al.patch
+	patches.suse/iwlwifi-mvm-demote-non-compliant-kernel-doc-header.patch
 	patches.suse/iwlwifi-mvm-synchronize-with-FW-after-multicast-comm.patch
 	patches.suse/iwlwifi-mvm-avoid-clearing-a-just-saved-session-prot.patch
 	patches.suse/ath11k-Use-host-CE-parameters-for-CE-interrupts-conf.patch
