--- a/series.conf
+++ b/series.conf
@@ -8282,6 +8282,7 @@
 	patches.suse/iwlwifi-support-4-bits-in-MAC-step-value.patch
 	patches.suse/iwlwifi-add-support-for-Bz-Z-HW.patch
 	patches.suse/iwlwifi-mvm-d3-move-GTK-rekeys-condition.patch
+	patches.suse/iwlwifi-pcie-support-Bz-suspend-resume-trigger.patch
 	patches.suse/iwlwifi-mvm-avoid-clearing-a-just-saved-session-prot.patch
 	patches.suse/ath11k-Use-host-CE-parameters-for-CE-interrupts-conf.patch
 	patches.suse/ath11k-Avoid-NULL-ptr-access-during-mgmt-tx-cleanup.patch
