--- a/series.conf
+++ b/series.conf
@@ -8299,6 +8299,7 @@
 	patches.suse/iwlwifi-yoyo-support-for-DBGC4-for-dram.patch
 	patches.suse/iwlwifi-acpi-fix-wgds-rev-3-size.patch
 	patches.suse/iwlwifi-swap-1650i-and-1650s-killer-struct-names.patch
+	patches.suse/iwlwifi-fw-add-support-for-splitting-region-type-bit.patch
 	patches.suse/ath11k-Use-host-CE-parameters-for-CE-interrupts-conf.patch
 	patches.suse/ath11k-Avoid-NULL-ptr-access-during-mgmt-tx-cleanup.patch
 	patches.suse/ath10k-Fix-the-MTU-size-on-QCA9377-SDIO.patch
