iwlwifi: bump FW API to 68 for AX devices (bsc#1202131).

--- a/series.conf
+++ b/series.conf
@@ -8301,6 +8301,7 @@
 	patches.suse/iwlwifi-swap-1650i-and-1650s-killer-struct-names.patch
 	patches.suse/iwlwifi-fw-add-support-for-splitting-region-type-bit.patch
 	patches.suse/iwlwifi-mvm-add-some-missing-command-strings.patch
+	patches.suse/iwlwifi-bump-FW-API-to-68-for-AX-devices.patch
 	patches.suse/ath11k-Use-host-CE-parameters-for-CE-interrupts-conf.patch
 	patches.suse/ath11k-Avoid-NULL-ptr-access-during-mgmt-tx-cleanup.patch
 	patches.suse/ath10k-Fix-the-MTU-size-on-QCA9377-SDIO.patch
