--- a/series.conf
+++ b/series.conf
@@ -8306,6 +8306,7 @@
 	patches.suse/iwlwifi-mvm-always-use-4K-RB-size-by-default.patch
 	patches.suse/iwlwifi-pcie-retake-ownership-after-reset.patch
 	patches.suse/iwlwifi-support-SAR-GEO-Offset-Mapping-override-via-.patch
+	patches.suse/iwlwifi-dbg-disable-ini-debug-in-8000-family-and-bel.patch
 	patches.suse/ath11k-Use-host-CE-parameters-for-CE-interrupts-conf.patch
 	patches.suse/ath11k-Avoid-NULL-ptr-access-during-mgmt-tx-cleanup.patch
 	patches.suse/ath10k-Fix-the-MTU-size-on-QCA9377-SDIO.patch
