--- a/series.conf
+++ b/series.conf
@@ -8304,6 +8304,7 @@
 	patches.suse/iwlwifi-bump-FW-API-to-68-for-AX-devices.patch
 	patches.suse/iwlwifi-mvm-api-define-system-control-command.patch
 	patches.suse/iwlwifi-mvm-always-use-4K-RB-size-by-default.patch
+	patches.suse/iwlwifi-pcie-retake-ownership-after-reset.patch
 	patches.suse/ath11k-Use-host-CE-parameters-for-CE-interrupts-conf.patch
 	patches.suse/ath11k-Avoid-NULL-ptr-access-during-mgmt-tx-cleanup.patch
 	patches.suse/ath10k-Fix-the-MTU-size-on-QCA9377-SDIO.patch
