--- a/series.conf
+++ b/series.conf
@@ -8305,6 +8305,7 @@
 	patches.suse/iwlwifi-mvm-api-define-system-control-command.patch
 	patches.suse/iwlwifi-mvm-always-use-4K-RB-size-by-default.patch
 	patches.suse/iwlwifi-pcie-retake-ownership-after-reset.patch
+	patches.suse/iwlwifi-support-SAR-GEO-Offset-Mapping-override-via-.patch
 	patches.suse/ath11k-Use-host-CE-parameters-for-CE-interrupts-conf.patch
 	patches.suse/ath11k-Avoid-NULL-ptr-access-during-mgmt-tx-cleanup.patch
 	patches.suse/ath10k-Fix-the-MTU-size-on-QCA9377-SDIO.patch
