iwlwifi: add new Qu-Hr device (bsc#1202131).

--- a/series.conf
+++ b/series.conf
@@ -8308,6 +8308,7 @@
 	patches.suse/iwlwifi-support-SAR-GEO-Offset-Mapping-override-via-.patch
 	patches.suse/iwlwifi-dbg-disable-ini-debug-in-8000-family-and-bel.patch
 	patches.suse/iwlwifi-Fix-FW-name-for-gl.patch
+	patches.suse/iwlwifi-add-new-Qu-Hr-device.patch
 	patches.suse/ath11k-Use-host-CE-parameters-for-CE-interrupts-conf.patch
 	patches.suse/ath11k-Avoid-NULL-ptr-access-during-mgmt-tx-cleanup.patch
 	patches.suse/ath10k-Fix-the-MTU-size-on-QCA9377-SDIO.patch
