--- a/series.conf
+++ b/series.conf
@@ -8309,6 +8309,7 @@
 	patches.suse/iwlwifi-dbg-disable-ini-debug-in-8000-family-and-bel.patch
 	patches.suse/iwlwifi-Fix-FW-name-for-gl.patch
 	patches.suse/iwlwifi-add-new-Qu-Hr-device.patch
+	patches.suse/iwlwifi-implement-reset-flow-for-Bz-devices.patch
 	patches.suse/ath11k-Use-host-CE-parameters-for-CE-interrupts-conf.patch
 	patches.suse/ath11k-Avoid-NULL-ptr-access-during-mgmt-tx-cleanup.patch
 	patches.suse/ath10k-Fix-the-MTU-size-on-QCA9377-SDIO.patch
