--- a/series.conf
+++ b/series.conf
@@ -8312,6 +8312,7 @@
 	patches.suse/iwlwifi-implement-reset-flow-for-Bz-devices.patch
 	patches.suse/iwlwifi-fw-correctly-detect-HW-SMEM-region-subtype.patch
 	patches.suse/iwlwifi-add-new-ax1650-killer-device.patch
+	patches.suse/iwlwifi-mvm-optionally-suppress-assert-log.patch
 	patches.suse/ath11k-Use-host-CE-parameters-for-CE-interrupts-conf.patch
 	patches.suse/ath11k-Avoid-NULL-ptr-access-during-mgmt-tx-cleanup.patch
 	patches.suse/ath10k-Fix-the-MTU-size-on-QCA9377-SDIO.patch
