iwlwifi: mvm: fix a stray tab (bsc#1202131).

--- a/series.conf
+++ b/series.conf
@@ -8337,6 +8337,7 @@
 	patches.suse/rtw88-Disable-PCIe-ASPM-while-doing-NAPI-poll-on-882.patch
 	patches.suse/rtw88-8822c-update-rx-settings-to-prevent-potential-.patch
 	patches.suse/rtlwifi-rtl8192cu-Fix-WARNING-when-calling-local_irq.patch
+	patches.suse/iwlwifi-mvm-fix-a-stray-tab.patch
 	patches.suse/iwlwifi-fix-Bz-NMI-behaviour.patch
 	patches.suse/iwlwifi-mvm-Increase-the-scan-timeout-guard-to-30-se.patch
 	patches.suse/iwlwifi-mvm-fix-32-bit-build-in-FTM.patch
