--- a/series.conf
+++ b/series.conf
@@ -8340,6 +8340,7 @@
 	patches.suse/iwlwifi-mvm-fix-a-stray-tab.patch
 	patches.suse/iwlwifi-mvm-clean-up-indenting-in-iwl_mvm_tlc_update.patch
 	patches.suse/iwlwifi-iwl-eeprom-parse-mostly-dvm-only.patch
+	patches.suse/iwlwifi-do-not-use-__unused-as-variable-name.patch
 	patches.suse/iwlwifi-fix-Bz-NMI-behaviour.patch
 	patches.suse/iwlwifi-mvm-Increase-the-scan-timeout-guard-to-30-se.patch
 	patches.suse/iwlwifi-mvm-fix-32-bit-build-in-FTM.patch
