--- a/series.conf
+++ b/series.conf
@@ -8342,6 +8342,7 @@
 	patches.suse/iwlwifi-iwl-eeprom-parse-mostly-dvm-only.patch
 	patches.suse/iwlwifi-do-not-use-__unused-as-variable-name.patch
 	patches.suse/iwlwifi-fix-Bz-NMI-behaviour.patch
+	patches.suse/iwlwifi-fw-remove-dead-error-log-code.patch
 	patches.suse/iwlwifi-mvm-Increase-the-scan-timeout-guard-to-30-se.patch
 	patches.suse/iwlwifi-mvm-fix-32-bit-build-in-FTM.patch
 	patches.suse/iwlwifi-fix-leaks-bad-data-after-failed-firmware-loa.patch
