iwlwifi: mvm: support revision 1 of WTAS table (bsc#1202131).

--- a/series.conf
+++ b/series.conf
@@ -8345,6 +8345,7 @@
 	patches.suse/iwlwifi-fw-remove-dead-error-log-code.patch
 	patches.suse/iwlwifi-pcie-add-jacket-bit-to-device-configuration-.patch
 	patches.suse/iwlwifi-Read-the-correct-addresses-when-getting-the-.patch
+	patches.suse/iwlwifi-mvm-support-revision-1-of-WTAS-table.patch
 	patches.suse/iwlwifi-mvm-Increase-the-scan-timeout-guard-to-30-se.patch
 	patches.suse/iwlwifi-mvm-fix-32-bit-build-in-FTM.patch
 	patches.suse/iwlwifi-fix-leaks-bad-data-after-failed-firmware-loa.patch
