iwlwifi: rs: add support for TLC config command ver 4 (bsc#1202131).

--- a/series.conf
+++ b/series.conf
@@ -8349,6 +8349,7 @@
 	patches.suse/iwlwifi-mvm-Add-list-of-OEMs-allowed-to-use-TAS.patch
 	patches.suse/iwlwifi-add-support-for-BNJ-HW.patch
 	patches.suse/iwlwifi-mvm-rfi-update-rfi-table.patch
+	patches.suse/iwlwifi-rs-add-support-for-TLC-config-command-ver-4.patch
 	patches.suse/iwlwifi-mvm-Increase-the-scan-timeout-guard-to-30-se.patch
 	patches.suse/iwlwifi-mvm-fix-32-bit-build-in-FTM.patch
 	patches.suse/iwlwifi-fix-leaks-bad-data-after-failed-firmware-loa.patch
