--- a/series.conf
+++ b/series.conf
@@ -8352,6 +8352,7 @@
 	patches.suse/iwlwifi-rs-add-support-for-TLC-config-command-ver-4.patch
 	patches.suse/iwlwifi-recognize-missing-PNVM-data-and-then-log-fil.patch
 	patches.suse/iwlwifi-mvm-Increase-the-scan-timeout-guard-to-30-se.patch
+	patches.suse/iwlwifi-parse-error-tables-from-debug-TLVs.patch
 	patches.suse/iwlwifi-mvm-fix-32-bit-build-in-FTM.patch
 	patches.suse/iwlwifi-fix-leaks-bad-data-after-failed-firmware-loa.patch
 	patches.suse/iwlwifi-remove-module-loading-failure-message.patch
