--- a/series.conf
+++ b/series.conf
@@ -8350,6 +8350,7 @@
 	patches.suse/iwlwifi-add-support-for-BNJ-HW.patch
 	patches.suse/iwlwifi-mvm-rfi-update-rfi-table.patch
 	patches.suse/iwlwifi-rs-add-support-for-TLC-config-command-ver-4.patch
+	patches.suse/iwlwifi-recognize-missing-PNVM-data-and-then-log-fil.patch
 	patches.suse/iwlwifi-mvm-Increase-the-scan-timeout-guard-to-30-se.patch
 	patches.suse/iwlwifi-mvm-fix-32-bit-build-in-FTM.patch
 	patches.suse/iwlwifi-fix-leaks-bad-data-after-failed-firmware-loa.patch
