iwlwifi: dump RCM error tables (bsc#1202131).

--- a/series.conf
+++ b/series.conf
@@ -8355,6 +8355,7 @@
 	patches.suse/iwlwifi-parse-error-tables-from-debug-TLVs.patch
 	patches.suse/iwlwifi-dump-CSR-scratch-from-outer-function.patch
 	patches.suse/iwlwifi-dump-both-TCM-error-tables-if-present.patch
+	patches.suse/iwlwifi-dump-RCM-error-tables.patch
 	patches.suse/iwlwifi-mvm-fix-32-bit-build-in-FTM.patch
 	patches.suse/iwlwifi-fix-leaks-bad-data-after-failed-firmware-loa.patch
 	patches.suse/iwlwifi-remove-module-loading-failure-message.patch
