--- a/series.conf
+++ b/series.conf
@@ -8347,6 +8347,7 @@
 	patches.suse/iwlwifi-Read-the-correct-addresses-when-getting-the-.patch
 	patches.suse/iwlwifi-mvm-support-revision-1-of-WTAS-table.patch
 	patches.suse/iwlwifi-mvm-Add-list-of-OEMs-allowed-to-use-TAS.patch
+	patches.suse/iwlwifi-add-support-for-BNJ-HW.patch
 	patches.suse/iwlwifi-mvm-Increase-the-scan-timeout-guard-to-30-se.patch
 	patches.suse/iwlwifi-mvm-fix-32-bit-build-in-FTM.patch
 	patches.suse/iwlwifi-fix-leaks-bad-data-after-failed-firmware-loa.patch
