--- a/series.conf
+++ b/series.conf
@@ -8364,6 +8364,7 @@
 	patches.suse/iwlwifi-remove-module-loading-failure-message.patch
 	patches.suse/iwlwifi-mvm-use-a-define-for-checksum-flags-mask.patch
 	patches.suse/iwlwifi-mvm-handle-RX-checksum-on-Bz-devices.patch
+	patches.suse/iwlwifi-mvm-don-t-trust-hardware-queue-number.patch
 	patches.suse/iwlwifi-don-t-pass-actual-WGDS-revision-number-in-ta.patch
 	patches.suse/iwlwifi-mvm-test-roc-running-status-bits-before-remo.patch
 	patches.suse/iwlwifi-mvm-Fix-calculation-of-frame-length.patch
