--- a/series.conf
+++ b/series.conf
@@ -8381,6 +8381,7 @@
 	patches.suse/iwlwifi-mvm-support-Bz-TX-checksum-offload.patch
 	patches.suse/iwlwifi-mvm-fix-AUX-ROC-removal.patch
 	patches.suse/iwlwifi-mvm-drop-too-short-packets-silently.patch
+	patches.suse/iwlwifi-mvm-remove-card-state-notification-code.patch
 	patches.suse/iwlwifi-pcie-make-sure-prph_info-is-set-when-treatin.patch
 	patches.suse/ath9k_htc-fix-NULL-pointer-dereference-at-ath9k_htc_.patch
 	patches.suse/ath9k_htc-fix-NULL-pointer-dereference-at-ath9k_htc_-8b3046abc99e.patch
