iwlwifi: mvm: add support for OCE scan (bsc#1202131).

--- a/series.conf
+++ b/series.conf
@@ -8359,6 +8359,7 @@
 	patches.suse/iwlwifi-mvm-fix-32-bit-build-in-FTM.patch
 	patches.suse/iwlwifi-fix-debug-TLV-parsing.patch
 	patches.suse/iwlwifi-fix-leaks-bad-data-after-failed-firmware-loa.patch
+	patches.suse/iwlwifi-mvm-add-support-for-OCE-scan.patch
 	patches.suse/iwlwifi-remove-module-loading-failure-message.patch
 	patches.suse/iwlwifi-don-t-pass-actual-WGDS-revision-number-in-ta.patch
 	patches.suse/iwlwifi-mvm-test-roc-running-status-bits-before-remo.patch
