iwlwifi: mvm: always store the PPAG table as the latest version (bsc#1202131).

--- a/series.conf
+++ b/series.conf
@@ -8371,6 +8371,7 @@
 	patches.suse/iwlwifi-mvm-test-roc-running-status-bits-before-remo.patch
 	patches.suse/iwlwifi-mvm-Fix-calculation-of-frame-length.patch
 	patches.suse/iwlwifi-bump-FW-API-to-69-for-AX-devices.patch
+	patches.suse/iwlwifi-mvm-always-store-the-PPAG-table-as-the-lates.patch
 	patches.suse/iwlwifi-mvm-perform-6GHz-passive-scan-after-suspend.patch
 	patches.suse/iwlwifi-pcie-add-killer-devices-to-the-driver.patch
 	patches.suse/iwlwifi-mvm-set-protected-flag-only-for-NDP-ranging.patch
