--- a/series.conf
+++ b/series.conf
@@ -8377,6 +8377,7 @@
 	patches.suse/iwlwifi-pcie-add-killer-devices-to-the-driver.patch
 	patches.suse/iwlwifi-mvm-set-protected-flag-only-for-NDP-ranging.patch
 	patches.suse/iwlwifi-mvm-correctly-set-schedule-scan-profiles.patch
+	patches.suse/iwlwifi-mvm-add-US-CA-to-TAS-block-list-if-OEM-isn-t.patch
 	patches.suse/iwlwifi-mvm-fix-AUX-ROC-removal.patch
 	patches.suse/iwlwifi-pcie-make-sure-prph_info-is-set-when-treatin.patch
 	patches.suse/ath9k_htc-fix-NULL-pointer-dereference-at-ath9k_htc_.patch
