iwlwifi: yoyo: support TLV-based firmware reset (bsc#1202131).

--- a/series.conf
+++ b/series.conf
@@ -8366,6 +8366,7 @@
 	patches.suse/iwlwifi-mvm-handle-RX-checksum-on-Bz-devices.patch
 	patches.suse/iwlwifi-mvm-don-t-trust-hardware-queue-number.patch
 	patches.suse/iwlwifi-mvm-change-old-SN-drop-threshold.patch
+	patches.suse/iwlwifi-yoyo-support-TLV-based-firmware-reset.patch
 	patches.suse/iwlwifi-don-t-pass-actual-WGDS-revision-number-in-ta.patch
 	patches.suse/iwlwifi-mvm-test-roc-running-status-bits-before-remo.patch
 	patches.suse/iwlwifi-mvm-Fix-calculation-of-frame-length.patch
