--- a/series.conf
+++ b/series.conf
@@ -8370,6 +8370,7 @@
 	patches.suse/iwlwifi-don-t-pass-actual-WGDS-revision-number-in-ta.patch
 	patches.suse/iwlwifi-mvm-test-roc-running-status-bits-before-remo.patch
 	patches.suse/iwlwifi-mvm-Fix-calculation-of-frame-length.patch
+	patches.suse/iwlwifi-bump-FW-API-to-69-for-AX-devices.patch
 	patches.suse/iwlwifi-mvm-perform-6GHz-passive-scan-after-suspend.patch
 	patches.suse/iwlwifi-pcie-add-killer-devices-to-the-driver.patch
 	patches.suse/iwlwifi-mvm-set-protected-flag-only-for-NDP-ranging.patch
