iwlwifi: mvm: use a define for checksum flags mask (bsc#1202131).

--- a/series.conf
+++ b/series.conf
@@ -8362,6 +8362,7 @@
 	patches.suse/iwlwifi-mvm-add-support-for-OCE-scan.patch
 	patches.suse/iwlwifi-mvm-isolate-offload-assist-checksum-calculat.patch
 	patches.suse/iwlwifi-remove-module-loading-failure-message.patch
+	patches.suse/iwlwifi-mvm-use-a-define-for-checksum-flags-mask.patch
 	patches.suse/iwlwifi-don-t-pass-actual-WGDS-revision-number-in-ta.patch
 	patches.suse/iwlwifi-mvm-test-roc-running-status-bits-before-remo.patch
 	patches.suse/iwlwifi-mvm-Fix-calculation-of-frame-length.patch
