--- a/series.conf
+++ b/series.conf
@@ -8384,6 +8384,7 @@
 	patches.suse/iwlwifi-mvm-remove-card-state-notification-code.patch
 	patches.suse/iwlwifi-pcie-make-sure-prph_info-is-set-when-treatin.patch
 	patches.suse/iwlwifi-fw-fix-some-scan-kernel-doc.patch
+	patches.suse/iwlwifi-yoyo-fix-issue-with-new-DBGI_SRAM-region-rea.patch
 	patches.suse/ath9k_htc-fix-NULL-pointer-dereference-at-ath9k_htc_.patch
 	patches.suse/ath9k_htc-fix-NULL-pointer-dereference-at-ath9k_htc_-8b3046abc99e.patch
 	patches.suse/ath9k-Fix-out-of-bound-memcpy-in-ath9k_hif_usb_rx_st.patch
