--- a/series.conf
+++ b/series.conf
@@ -10581,6 +10581,7 @@
 	patches.suse/iwlwifi-mvm-offload-channel-switch-timing-to-FW.patch
 	patches.suse/iwlwifi-mvm-allow-enabling-UHB-TAS-in-the-USA-via-AC.patch
 	patches.suse/iwlwifi-prefer-WIDE_ID-over-iwl_cmd_id.patch
+	patches.suse/iwlwifi-mvm-fw-clean-up-hcmd-struct-creation.patch
 	patches.suse/iwlwifi-mvm-don-t-iterate-unadded-vifs-when-handling.patch
 	patches.suse/iwlwifi-mvm-align-locking-in-D3-test-debugfs.patch
 	patches.suse/iwlwifi-yoyo-fix-DBGC-allocation-flow.patch
