--- a/series.conf
+++ b/series.conf
@@ -10583,6 +10583,7 @@
 	patches.suse/iwlwifi-prefer-WIDE_ID-over-iwl_cmd_id.patch
 	patches.suse/iwlwifi-mvm-fw-clean-up-hcmd-struct-creation.patch
 	patches.suse/iwlwifi-make-iwl_fw_lookup_cmd_ver-take-a-cmd_id.patch
+	patches.suse/iwlwifi-de-const-properly-where-needed.patch
 	patches.suse/iwlwifi-mvm-don-t-iterate-unadded-vifs-when-handling.patch
 	patches.suse/iwlwifi-mvm-align-locking-in-D3-test-debugfs.patch
 	patches.suse/iwlwifi-yoyo-fix-DBGC-allocation-flow.patch
