--- a/series.conf
+++ b/series.conf
@@ -10579,6 +10579,7 @@
 	patches.suse/ieee80211-add-EHT-1K-aggregation-definitions.patch
 	patches.suse/iwlwifi-mvm-Don-t-call-iwl_mvm_sta_from_mac80211-wit.patch
 	patches.suse/iwlwifi-mvm-offload-channel-switch-timing-to-FW.patch
+	patches.suse/iwlwifi-mvm-allow-enabling-UHB-TAS-in-the-USA-via-AC.patch
 	patches.suse/iwlwifi-mvm-don-t-iterate-unadded-vifs-when-handling.patch
 	patches.suse/iwlwifi-mvm-align-locking-in-D3-test-debugfs.patch
 	patches.suse/iwlwifi-yoyo-fix-DBGC-allocation-flow.patch
