iwlwifi: mvm: offload channel switch timing to FW (bsc#1202131).

--- a/series.conf
+++ b/series.conf
@@ -10578,6 +10578,7 @@
 	patches.suse/can-etas_es58x-es58x_fd_rx_event_msg-initialize-rx_e.patch
 	patches.suse/ieee80211-add-EHT-1K-aggregation-definitions.patch
 	patches.suse/iwlwifi-mvm-Don-t-call-iwl_mvm_sta_from_mac80211-wit.patch
+	patches.suse/iwlwifi-mvm-offload-channel-switch-timing-to-FW.patch
 	patches.suse/iwlwifi-mvm-don-t-iterate-unadded-vifs-when-handling.patch
 	patches.suse/iwlwifi-mvm-align-locking-in-D3-test-debugfs.patch
 	patches.suse/iwlwifi-yoyo-fix-DBGC-allocation-flow.patch
