--- a/series.conf
+++ b/series.conf
@@ -8327,6 +8327,7 @@
 	patches.suse/bnx2x-Invalidate-fastpath-HSI-version-for-VFs.patch
 	patches.suse/ieee80211-change-HE-nominal-packet-padding-value-def.patch
 	patches.suse/mac80211-Remove-a-couple-of-obsolete-TODO.patch
+	patches.suse/mac80211-introduce-channel-switch-disconnect-functio.patch
 	patches.suse/mt76-mt7921-drop-offload_flags-overwritten.patch
 	patches.suse/mt76-mt7615-fix-possible-deadlock-while-mt7615_regis.patch
 	patches.suse/mt76-do-not-pass-the-received-frame-with-decryption-.patch
