iwlwifi: mvm: support new BAID allocation command (bsc#1202131).

--- a/series.conf
+++ b/series.conf
@@ -10589,6 +10589,7 @@
 	patches.suse/iwlwifi-avoid-void-pointer-arithmetic.patch
 	patches.suse/iwlwifi-cfg-add-support-for-1K-BA-queue.patch
 	patches.suse/iwlwifi-mvm-refactor-iwl_mvm_sta_rx_agg.patch
+	patches.suse/iwlwifi-mvm-support-new-BAID-allocation-command.patch
 	patches.suse/iwlwifi-mvm-don-t-iterate-unadded-vifs-when-handling.patch
 	patches.suse/iwlwifi-mvm-align-locking-in-D3-test-debugfs.patch
 	patches.suse/iwlwifi-yoyo-fix-DBGC-allocation-flow.patch
