iwlwifi: dbg: add infra for tracking free buffer size (bsc#1202131).

--- a/series.conf
+++ b/series.conf
@@ -10591,6 +10591,7 @@
 	patches.suse/iwlwifi-mvm-refactor-iwl_mvm_sta_rx_agg.patch
 	patches.suse/iwlwifi-mvm-support-new-BAID-allocation-command.patch
 	patches.suse/iwlwifi-mvm-starting-from-22000-we-have-32-Rx-AMPDU-.patch
+	patches.suse/iwlwifi-dbg-add-infra-for-tracking-free-buffer-size.patch
 	patches.suse/iwlwifi-mvm-don-t-iterate-unadded-vifs-when-handling.patch
 	patches.suse/iwlwifi-mvm-align-locking-in-D3-test-debugfs.patch
 	patches.suse/iwlwifi-yoyo-fix-DBGC-allocation-flow.patch
