--- a/series.conf
+++ b/series.conf
@@ -10586,6 +10586,7 @@
 	patches.suse/iwlwifi-de-const-properly-where-needed.patch
 	patches.suse/iwlwifi-propagate-const-type-qualifier.patch
 	patches.suse/iwlwifi-fix-various-more-Wcast-qual-warnings.patch
+	patches.suse/iwlwifi-avoid-void-pointer-arithmetic.patch
 	patches.suse/iwlwifi-mvm-don-t-iterate-unadded-vifs-when-handling.patch
 	patches.suse/iwlwifi-mvm-align-locking-in-D3-test-debugfs.patch
 	patches.suse/iwlwifi-yoyo-fix-DBGC-allocation-flow.patch
