--- a/series.conf
+++ b/series.conf
@@ -10604,6 +10604,7 @@
 	patches.suse/iwlwifi-yoyo-remove-DBGI_SRAM-address-reset-writing.patch
 	patches.suse/iwlwifi-mvm-add-support-for-CT-KILL-notification-ver.patch
 	patches.suse/iwlwifi-add-support-for-BZ-U-and-BZ-L-HW.patch
+	patches.suse/iwlwifi-mvm-use-debug-print-instead-of-WARN_ON.patch
 	patches.suse/iwlwifi-dbg-tlv-clean-up-iwl_dbg_tlv_update_drams.patch
 	patches.suse/iwlwifi-mvm-Correctly-set-fragmented-EBS.patch
 	patches.suse/iwlwifi-yoyo-Avoid-using-dram-data-if-allocation-fai.patch
