--- a/series.conf
+++ b/series.conf
@@ -10599,6 +10599,7 @@
 	patches.suse/iwlwifi-mvm-align-locking-in-D3-test-debugfs.patch
 	patches.suse/iwlwifi-pcie-add-support-for-MS-devices.patch
 	patches.suse/iwlwifi-yoyo-fix-DBGC-allocation-flow.patch
+	patches.suse/iwlwifi-yoyo-add-IMR-DRAM-dump-support.patch
 	patches.suse/iwlwifi-yoyo-remove-DBGI_SRAM-address-reset-writing.patch
 	patches.suse/iwlwifi-dbg-tlv-clean-up-iwl_dbg_tlv_update_drams.patch
 	patches.suse/iwlwifi-mvm-Correctly-set-fragmented-EBS.patch
