iwlwifi: add support for BZ-U and BZ-L HW (bsc#1202131).

--- a/series.conf
+++ b/series.conf
@@ -10603,6 +10603,7 @@
 	patches.suse/iwlwifi-mvm-support-v3-of-station-HE-context-command.patch
 	patches.suse/iwlwifi-yoyo-remove-DBGI_SRAM-address-reset-writing.patch
 	patches.suse/iwlwifi-mvm-add-support-for-CT-KILL-notification-ver.patch
+	patches.suse/iwlwifi-add-support-for-BZ-U-and-BZ-L-HW.patch
 	patches.suse/iwlwifi-dbg-tlv-clean-up-iwl_dbg_tlv_update_drams.patch
 	patches.suse/iwlwifi-mvm-Correctly-set-fragmented-EBS.patch
 	patches.suse/iwlwifi-yoyo-Avoid-using-dram-data-if-allocation-fai.patch
