iwlwifi: advertise support for HE - DCM BPSK RX/TX (bsc#1202131).

--- a/series.conf
+++ b/series.conf
@@ -10594,6 +10594,7 @@
 	patches.suse/iwlwifi-dbg-add-infra-for-tracking-free-buffer-size.patch
 	patches.suse/iwlwifi-yoyo-fix-DBGI_SRAM-ini-dump-header.patch
 	patches.suse/iwlwifi-mvm-only-enable-HE-DCM-if-we-also-support-TX.patch
+	patches.suse/iwlwifi-advertise-support-for-HE-DCM-BPSK-RX-TX.patch
 	patches.suse/iwlwifi-mvm-don-t-iterate-unadded-vifs-when-handling.patch
 	patches.suse/iwlwifi-mvm-align-locking-in-D3-test-debugfs.patch
 	patches.suse/iwlwifi-yoyo-fix-DBGC-allocation-flow.patch
