--- a/series.conf
+++ b/series.conf
@@ -10610,6 +10610,7 @@
 	patches.suse/iwlwifi-move-symbols-into-a-separate-namespace.patch
 	patches.suse/iwlwifi-dbg-tlv-clean-up-iwl_dbg_tlv_update_drams.patch
 	patches.suse/iwlwifi-remove-unused-DC2DC_CONFIG_CMD-definitions.patch
+	patches.suse/iwlwifi-avoid-variable-shadowing.patch
 	patches.suse/iwlwifi-mvm-Correctly-set-fragmented-EBS.patch
 	patches.suse/iwlwifi-yoyo-Avoid-using-dram-data-if-allocation-fai.patch
 	patches.suse/iwlwifi-mvm-move-only-to-an-enabled-channel.patch
