--- a/series.conf
+++ b/series.conf
@@ -10615,6 +10615,7 @@
 	patches.suse/iwlwifi-nvm-Correct-HE-capability.patch
 	patches.suse/iwlwifi-mvm-Correctly-set-fragmented-EBS.patch
 	patches.suse/iwlwifi-yoyo-Avoid-using-dram-data-if-allocation-fai.patch
+	patches.suse/iwlwifi-scan-Modify-return-value-of-a-function.patch
 	patches.suse/iwlwifi-mvm-move-only-to-an-enabled-channel.patch
 	patches.suse/iwlwifi-Fix-EIO-error-code-that-is-never-returned.patch
 	patches.suse/iwlwifi-mvm-Fix-an-error-code-in-iwl_mvm_up.patch
