iwlwifi: move symbols into a separate namespace (bsc#1202131).

--- a/series.conf
+++ b/series.conf
@@ -10607,6 +10607,7 @@
 	patches.suse/iwlwifi-mvm-use-debug-print-instead-of-WARN_ON.patch
 	patches.suse/iwlwifi-pcie-make-sure-iwl_rx_packet_payload_len-wil.patch
 	patches.suse/iwlwifi-fw-make-dump_start-callback-void.patch
+	patches.suse/iwlwifi-move-symbols-into-a-separate-namespace.patch
 	patches.suse/iwlwifi-dbg-tlv-clean-up-iwl_dbg_tlv_update_drams.patch
 	patches.suse/iwlwifi-mvm-Correctly-set-fragmented-EBS.patch
 	patches.suse/iwlwifi-yoyo-Avoid-using-dram-data-if-allocation-fai.patch
