--- a/series.conf
+++ b/series.conf
@@ -10612,6 +10612,7 @@
 	patches.suse/iwlwifi-remove-unused-DC2DC_CONFIG_CMD-definitions.patch
 	patches.suse/iwlwifi-avoid-variable-shadowing.patch
 	patches.suse/iwlwifi-make-some-functions-friendly-to-sparse.patch
+	patches.suse/iwlwifi-nvm-Correct-HE-capability.patch
 	patches.suse/iwlwifi-mvm-Correctly-set-fragmented-EBS.patch
 	patches.suse/iwlwifi-yoyo-Avoid-using-dram-data-if-allocation-fai.patch
 	patches.suse/iwlwifi-mvm-move-only-to-an-enabled-channel.patch
