iwlwifi: eeprom: clean up macros (bsc#1202131).

--- a/series.conf
+++ b/series.conf
@@ -10620,6 +10620,7 @@
 	patches.suse/iwlwifi-pcie-adjust-to-Bz-completion-descriptor.patch
 	patches.suse/iwlwifi-pcie-Adapt-rx-queue-write-pointer-for-Bz-fam.patch
 	patches.suse/iwlwifi-drv-load-tlv-debug-data-earlier.patch
+	patches.suse/iwlwifi-eeprom-clean-up-macros.patch
 	patches.suse/iwlwifi-mvm-move-only-to-an-enabled-channel.patch
 	patches.suse/iwlwifi-Fix-EIO-error-code-that-is-never-returned.patch
 	patches.suse/iwlwifi-mvm-Fix-an-error-code-in-iwl_mvm_up.patch
