iwlwifi: mvm: make iwl_mvm_reconfig_scd() static (bsc#1202131).

--- a/series.conf
+++ b/series.conf
@@ -10632,6 +10632,7 @@
 	patches.suse/iwlwifi-mvm-add-additional-info-for-boot-info-failur.patch
 	patches.suse/iwlwifi-mvm-Disable-WiFi-bands-selectively-with-BIOS.patch
 	patches.suse/iwlwifi-mvm-refactor-setting-PPE-thresholds-in-STA_H.patch
+	patches.suse/iwlwifi-mvm-make-iwl_mvm_reconfig_scd-static.patch
 	patches.suse/iwlwifi-mvm-move-only-to-an-enabled-channel.patch
 	patches.suse/iwlwifi-Fix-EIO-error-code-that-is-never-returned.patch
 	patches.suse/iwlwifi-mvm-Fix-an-error-code-in-iwl_mvm_up.patch
