iwlwifi: yoyo: support dump policy for the dump size (bsc#1202131).

--- a/series.conf
+++ b/series.conf
@@ -10641,6 +10641,7 @@
 	patches.suse/iwlwifi-mvm-remove-iwl_mvm_disable_txq-flags-argumen.patch
 	patches.suse/iwlwifi-tlc-Add-logs-in-rs_fw_rate_init-func-to-prin.patch
 	patches.suse/iwlwifi-pcie-iwlwifi-fix-device-id-7F70-struct.patch
+	patches.suse/iwlwifi-yoyo-support-dump-policy-for-the-dump-size.patch
 	patches.suse/iwlwifi-mvm-move-only-to-an-enabled-channel.patch
 	patches.suse/iwlwifi-Fix-EIO-error-code-that-is-never-returned.patch
 	patches.suse/iwlwifi-mvm-Fix-an-error-code-in-iwl_mvm_up.patch
