iwlwifi: tlc: Add logs in rs_fw_rate_init func to print TLC configuration (bsc#1202131).

--- a/series.conf
+++ b/series.conf
@@ -10639,6 +10639,7 @@
 	patches.suse/iwlwifi-make-iwl_txq_dyn_alloc_dma-return-the-txq.patch
 	patches.suse/iwlwifi-remove-command-ID-argument-from-queue-alloca.patch
 	patches.suse/iwlwifi-mvm-remove-iwl_mvm_disable_txq-flags-argumen.patch
+	patches.suse/iwlwifi-tlc-Add-logs-in-rs_fw_rate_init-func-to-prin.patch
 	patches.suse/iwlwifi-mvm-move-only-to-an-enabled-channel.patch
 	patches.suse/iwlwifi-Fix-EIO-error-code-that-is-never-returned.patch
 	patches.suse/iwlwifi-mvm-Fix-an-error-code-in-iwl_mvm_up.patch
