iwlwifi: Make use of the helper macro LIST_HEAD() (bsc#1202131).

--- a/series.conf
+++ b/series.conf
@@ -10648,6 +10648,7 @@
 	patches.suse/iwlwifi-mvm-move-only-to-an-enabled-channel.patch
 	patches.suse/iwlwifi-yoyo-send-hcmd-to-fw-after-dump-collection-c.patch
 	patches.suse/iwlwifi-mvm-fix-off-by-one-in-iwl_mvm_stat_iterator_.patch
+	patches.suse/iwlwifi-Make-use-of-the-helper-macro-LIST_HEAD.patch
 	patches.suse/iwlwifi-Fix-EIO-error-code-that-is-never-returned.patch
 	patches.suse/iwlwifi-mvm-Fix-an-error-code-in-iwl_mvm_up.patch
 	patches.suse/mt76-mt7915-fix-injected-MPDU-transmission-to-not-us.patch
