iwlwifi: mvm: add a flag to reduce power command (bsc#1202131).

--- a/series.conf
+++ b/series.conf
@@ -10664,6 +10664,7 @@
 	patches.suse/wcn36xx-Differentiate-wcn3660-from-wcn3620.patch
 	patches.suse/carl9170-fix-missing-bit-wise-or-operator-for-tx_par.patch
 	patches.suse/iwlwifi-bump-FW-API-to-71-for-AX-devices.patch
+	patches.suse/iwlwifi-mvm-add-a-flag-to-reduce-power-command.patch
 	patches.suse/iwlwifi-pcie-fix-SW-error-MSI-X-mapping.patch
 	patches.suse/Revert-ath-add-support-for-special-0x0-regulatory-do.patch
 	patches.suse/ath10k-Fix-error-handling-in-ath10k_setup_msa_resour.patch
