iwlwifi: mvm: rfi: use kmemdup() to replace kzalloc + memcpy (bsc#1202131).

--- a/series.conf
+++ b/series.conf
@@ -10652,6 +10652,7 @@
 	patches.suse/iwlwifi-fw-use-struct_size-over-open-coded-arithmeti.patch
 	patches.suse/iwlwifi-dvm-use-struct_size-over-open-coded-arithmet.patch
 	patches.suse/iwlwifi-Fix-syntax-errors-in-comments.patch
+	patches.suse/iwlwifi-mvm-rfi-use-kmemdup-to-replace-kzalloc-memcp.patch
 	patches.suse/iwlwifi-Fix-EIO-error-code-that-is-never-returned.patch
 	patches.suse/iwlwifi-mvm-Fix-an-error-code-in-iwl_mvm_up.patch
 	patches.suse/mt76-mt7915-fix-injected-MPDU-transmission-to-not-us.patch
