iwlwifi: mvm: remove cipher scheme support (bsc#1202131).

--- a/series.conf
+++ b/series.conf
@@ -10666,6 +10666,7 @@
 	patches.suse/iwlwifi-bump-FW-API-to-71-for-AX-devices.patch
 	patches.suse/iwlwifi-mvm-add-a-flag-to-reduce-power-command.patch
 	patches.suse/iwlwifi-Configure-FW-debug-preset-via-module-param.patch
+	patches.suse/iwlwifi-mvm-remove-cipher-scheme-support.patch
 	patches.suse/iwlwifi-pcie-fix-SW-error-MSI-X-mapping.patch
 	patches.suse/Revert-ath-add-support-for-special-0x0-regulatory-do.patch
 	patches.suse/ath10k-Fix-error-handling-in-ath10k_setup_msa_resour.patch
