iwlwifi: fw: init SAR GEO table only if data is present (bsc#1202131).

--- a/series.conf
+++ b/series.conf
@@ -12008,6 +12008,7 @@
 	patches.suse/mt76-do-not-attempt-to-reorder-received-802.3-packet.patch
 	patches.suse/mt76-fix-encap-offload-ethernet-type-check.patch
 	patches.suse/ath11k-Don-t-check-arvif-is_started-before-sending-m.patch
+	patches.suse/iwlwifi-fw-init-SAR-GEO-table-only-if-data-is-presen.patch
 	patches.suse/iwlwifi-mvm-fix-assert-1F04-upon-reconfig.patch
 	patches.suse/can-mcp251xfd-silence-clang-s-Wunaligned-access-warn.patch
 	patches.suse/Bluetooth-fix-dangling-sco_conn-and-use-after-free-i.patch
