nohz/full, sched/rt: Fix missed tick-reenabling bug in dequeue_task_rt() (bnc#1189999 (Scheduler functional and performance backports)).

--- a/series.conf
+++ b/series.conf
@@ -12823,6 +12823,7 @@
 	patches.suse/sched-fair-Remove-redundant-word.patch
 	patches.suse/sched-Remove-unused-function-group_first_cpu.patch
 	patches.suse/sched-core-Always-flush-pending-blk_plug.patch
+	patches.suse/nohz-full-sched-rt-Fix-missed-tick-reenabling-bug-in-dequeue_task_rt.patch
 	patches.suse/ARM-OMAP2-Fix-refcount-leak-in-omapdss_init_of.patch
 	patches.suse/ARM-OMAP2-Fix-refcount-leak-in-omap3xxx_prm_late_ini.patch
 	patches.suse/cpufreq-zynq-Fix-refcount-leak-in-zynq_get_revision.patch
