sched/fair: Fix cfs_rq_clock_pelt() for throttled cfs_rq -kabi (git fixes (sched/fair)).

--- a/series.conf
+++ b/series.conf
@@ -13819,6 +13819,8 @@
 	patches.kabi/nvmet-kabi-fixes-for-in-band-authentication.patch
 	patches.kabi/SUNRPC-Fix-NFSD-s-request-deferral-on-RDMA-transport-kabi.patch
 
+	patches.kabi/sched-fair-Fix-cfs_rq_clock_pelt-for-throttled-cfs_rq-kabi.patch
+
 	########################################################
 	# SLE15-SP3 OOT performance patches evaluated but left
 	# disabled. See patches for the SLE 15 SP4 notes.
