Input: exc3000 - fix return value check of wait_for_completion_timeout (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13283,6 +13283,7 @@
 	patches.suse/pinctrl-qcom-msm8916-Allow-CAMSS-GP-clocks-to-be-mux.patch
 	patches.suse/pinctrl-amd-Don-t-save-restore-interrupt-status-and-.patch
 	patches.suse/pinctrl-sunxi-Add-I-O-bias-setting-for-H6-R-PIO.patch
+	patches.suse/Input-exc3000-fix-return-value-check-of-wait_for_com.patch
 
 	########################################################
 	# end of sorted patches
