can: mcp251x: Fix race condition on receive interrupt (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13294,6 +13294,7 @@
 	patches.suse/geneve-do-not-use-RT_TOS-for-IPv6-flowlabel.patch
 	patches.suse/can-j1939-j1939_sk_queue_activate_next_locked-replac.patch
 	patches.suse/can-ems_usb-fix-clang-s-Wunaligned-access-warning.patch
+	patches.suse/can-mcp251x-Fix-race-condition-on-receive-interrupt.patch
 
 	########################################################
 	# end of sorted patches
