ACPI: property: Return type of acpi_add_nondev_subnodes() should be bool (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13284,6 +13284,7 @@
 	patches.suse/pinctrl-amd-Don-t-save-restore-interrupt-status-and-.patch
 	patches.suse/pinctrl-sunxi-Add-I-O-bias-setting-for-H6-R-PIO.patch
 	patches.suse/Input-exc3000-fix-return-value-check-of-wait_for_com.patch
+	patches.suse/ACPI-property-Return-type-of-acpi_add_nondev_subnode.patch
 
 	########################################################
 	# end of sorted patches
