Bluetooth: btusb: Add Realtek RTL8852C support ID 0x0CB8:0xC558 (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12901,6 +12901,7 @@
 	patches.suse/Bluetooth-hci_bcm-Add-BCM4349B1-variant.patch
 	patches.suse/Bluetooth-btusb-Add-Realtek-RTL8852C-support-ID-0x04.patch
 	patches.suse/Bluetooth-btusb-Add-Realtek-RTL8852C-support-ID-0x04-893fa8bc9952.patch
+	patches.suse/Bluetooth-btusb-Add-Realtek-RTL8852C-support-ID-0x0C.patch
 	patches.suse/wifi-mac80211-limit-A-MSDU-subframes-for-client-too.patch
 	patches.suse/mt76-mt76x02u-fix-possible-memory-leak-in-__mt76x02u.patch
 	patches.suse/mt76-mt7615-do-not-update-pm-stats-in-case-of-error.patch
