vsock: Set socket state back to SS_UNCONNECTED in vsock_connect_timeout() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13297,6 +13297,7 @@
 	patches.suse/can-mcp251x-Fix-race-condition-on-receive-interrupt.patch
 	patches.suse/Revert-net-usb-ax88179_178a-needs-FLAG_SEND_ZLP.patch
 	patches.suse/vsock-Fix-memory-leak-in-vsock_connect.patch
+	patches.suse/vsock-Set-socket-state-back-to-SS_UNCONNECTED-in-vso.patch
 
 	########################################################
 	# end of sorted patches
