net: phy: Warn about incorrect mdio_bus_phy_resume() state (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13285,6 +13285,7 @@
 	patches.suse/pinctrl-sunxi-Add-I-O-bias-setting-for-H6-R-PIO.patch
 	patches.suse/Input-exc3000-fix-return-value-check-of-wait_for_com.patch
 	patches.suse/ACPI-property-Return-type-of-acpi_add_nondev_subnode.patch
+	patches.suse/net-phy-Warn-about-incorrect-mdio_bus_phy_resume-sta.patch
 
 	########################################################
 	# end of sorted patches
