Revert "net: usb: ax88179_178a needs FLAG_SEND_ZLP" (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13295,6 +13295,7 @@
 	patches.suse/can-j1939-j1939_sk_queue_activate_next_locked-replac.patch
 	patches.suse/can-ems_usb-fix-clang-s-Wunaligned-access-warning.patch
 	patches.suse/can-mcp251x-Fix-race-condition-on-receive-interrupt.patch
+	patches.suse/Revert-net-usb-ax88179_178a-needs-FLAG_SEND_ZLP.patch
 
 	########################################################
 	# end of sorted patches
