atm: idt77252: fix use-after-free bugs caused by tst_timer (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13287,6 +13287,7 @@
 	patches.suse/ACPI-property-Return-type-of-acpi_add_nondev_subnode.patch
 	patches.suse/net-phy-Warn-about-incorrect-mdio_bus_phy_resume-sta.patch
 	patches.suse/virtio_net-fix-memory-leak-inside-XPD_TX-with-mergea.patch
+	patches.suse/atm-idt77252-fix-use-after-free-bugs-caused-by-tst_t.patch
 
 	########################################################
 	# end of sorted patches
